--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,13 @@ body {
 	position: relative;
 	// color: rgba(0,0,0,.7);
 }
+.bg_paralax{
+	background-position: center; 
+	
+}
+.bg-center{
+	background-position: center;
+}
 .img__logo{
 	height: 10vh;
 	width: 10vh;
